--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -39,7 +39,8 @@ linter:
     - type_init_formals
     - always_use_package_imports
     - cancel_subscriptions
-
+    - prefer_final_locals
+    
 analyzer:
   exclude: [build/**]
   language:
