--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,7 +6,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: '>=3.0.5 <4.0.0'
 
 dependencies:
   flutter:
@@ -39,7 +39,6 @@ dependencies:
   dots_indicator: ^2.1.0
   # Remove
   http: ^0.13.5
-  flutter_secure_storage: ^6.0.0
   # Remove
   get: ^4.6.6
 
