--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,10 +1,10 @@
 {
-    "name": "veebank",
-    "short_name": "veebank",
+    "name": "veegil",
+    "short_name": "veegil",
     "start_url": ".",
     "display": "standalone",
-    "background_color": "#FFF2CD14",
-    "theme_color": "#FFF2CD14",
+    "background_color": "#0175C2",
+    "theme_color": "#0175C2",
     "description": "A new Flutter project.",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
