--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -40,7 +40,8 @@ linter:
     - always_use_package_imports
     - cancel_subscriptions
     - prefer_final_locals
-    
+    - use_super_parameters
+
 analyzer:
   exclude: [build/**]
   language:
