--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -85,7 +85,7 @@ flutter_native_splash:
   # The branding property allows you to specify an image used as branding in the splash screen.
   # It must be a png file. It is supported for Android, iOS and the Web.  For Android 12,
   # see the Android 12 section below.
-  branding: assets/images/Veegil icon.png
+  branding: assets/images/veegil-icon.png
 
   # To position the branding image at the bottom of the screen you can use bottom, bottomRight,
   # and bottomLeft. The default values is bottom if not specified or specified something else.
@@ -203,11 +203,11 @@ flutter_launcher_icons:
   android: "ic_launcher"
   ios: true
   remove_alpha_ios: true
-  image_path: "assets/images/Veegil icon.png"
+  image_path: "assets/images/veegil-icon.png"
   min_sdk_android: 21 # android min sdk min:16, default 21
   web:
     generate: true
-    image_path: "assets/images/Veegil icon.png"
+    image_path: "assets/images/veegil-icon.png"
     background_color: "#FFF2CD14"
     theme_color: "#FFF2CD14"
   # windows:
