--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   get: ^4.6.6
   flutter_sticky_header: ^0.6.5
   shimmer: ^3.0.0
+  fl_chart: ^0.65.0
 
 dev_dependencies:
   change_app_package_name: ^1.1.0
