--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,11 @@
   "author": "noahweasley",
   "license": "ISC",
   "devDependencies": {
+    "cspell": "^8.13.2",
+    "dotenv": "^16.4.5",
+    "eslint": "^9.8.0",
+    "express": "^4.19.2",
+    "jest": "^29.7.0",
     "prettier": "^3.3.3"
   }
 }
