--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -24,7 +24,7 @@ dependencies:
   flutter_svg: ^1.1.6
   intl: ^0.18.1
   smooth_page_indicator: ^1.0.0+2
-  carousel_slider: ^4.2.1
+  carousel_slider: ^5.0.0
   dio: ^5.3.1
   pretty_dio_logger: ^1.3.1
   collection: ^1.17.2
@@ -83,4 +83,4 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
-    - assets/icons/
+    # - assets/icons/
